added random hair length

--- a/beardman/index.html
+++ b/beardman/index.html
@@ -14,8 +14,12 @@
     <input type="text" id="amount" value="500">
   </div>
   <div>
-    Length
-    <input type="text" id="length" value="2">
+    Min
+    <input type="text" id="minLength" value="2">
+  </div>
+  <div>
+    Max
+    <input type="text" id="maxLength" value="5">
   </div>
   <div>
     <input type="button" id="redraw" value="Redraw">
